fix: decompose dto on several and pass all tests
