# docs/swagger.yaml
@@ -27,7 +27,16 @@ definitions:
         example: task not found
         type: string
     type: object
-  dto.TaskDTO:
+  dto.TaskCreateDTO:
+    properties:
+      description:
+        type: string
+      name:
+        type: string
+    required:
+    - name
+    type: object
+  dto.TaskResponseDTO:
     properties:
       created_at:
         type: string
@@ -71,7 +80,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/dto.TaskDTO'
+              $ref: '#/definitions/dto.TaskResponseDTO'
             type: array
         "500":
           description: Internal Server Error
@@ -90,14 +99,14 @@ paths:
         name: task
         required: true
         schema:
-          $ref: '#/definitions/dto.TaskDTO'
+          $ref: '#/definitions/dto.TaskCreateDTO'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.TaskDTO'
+            $ref: '#/definitions/dto.TaskResponseDTO'
         "400":
           description: Bad Request
           schema:
@@ -152,7 +161,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.TaskDTO'
+            $ref: '#/definitions/dto.TaskResponseDTO'
         "400":
           description: Bad Request
           schema:
@@ -183,14 +192,14 @@ paths:
         name: task
         required: true
         schema:
-          $ref: '#/definitions/dto.TaskDTO'
+          $ref: '#/definitions/dto.TaskResponseDTO'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.TaskDTO'
+            $ref: '#/definitions/dto.TaskResponseDTO'
         "400":
           description: Bad Request
           schema:
